task310/src/main/java/com/example/task310/error/BadRequestException.java
package com.example.task310.error;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String msg) { super(msg); }
}
